--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
+    <meta name="description" content="CA Solution is a leading platform offering hassle-free Income Tax Return (ITR) filing services for individuals, businesses, and professionals. Our expert Chartered Accountants ensure timely and accurate filing with complete compliance. Whether you are a salaried employee, freelancer, or business owner, CA Solution simplifies tax filing with user-friendly tools, transparent pricing, and personalized support. "/>
+    <link rel="icon" type="image/svg+xml" href="./src/assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NS Solution</title>
+    <title>CA Solution</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -13,7 +14,27 @@
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@latest/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@latest/dist/ionicons/ionicons.js"></script>  
-<script src="https://kit.fontawesome.com/2d90274489.js" crossorigin="anonymous"></script>
+
+<!-- new Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11502040453"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11502040453');
+</script>
+
+<!-- old Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-710DYEVW5F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-710DYEVW5F');
+</script>
+<!--google analytics end here-->
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
@@ -21,7 +42,7 @@
   (function(){
   var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
   s1.async=true;
-  s1.src='https://embed.tawk.to/673f8fa44304e3196ae6d627/1id84i7eh';
+  s1.src='https://embed.tawk.to/676084adaf5bfec1dbdd0782/1if8gci1g';
   s1.charset='UTF-8';
   s1.setAttribute('crossorigin','*');
   s0.parentNode.insertBefore(s1,s0);
